chore: add more style to the changelog (#625)

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -1,6 +1,9 @@
 import Head from "next/head";
 import Nav from "../components/nav";
 import Section from "../components/section";
+import Figure from "../components/figure";
+import FigureGroup from "../components/figure-group";
+import Credit from "../components/credit";
 
 <Head>
   <title>Changelog - Chatterino</title>
@@ -8,7 +11,7 @@ import Section from "../components/section";
 
 <Nav />
 
- <Section className="changelog px-16">
+ <Section className="changelog px-16" prose>
 
 # Chatterino Changelog
 
@@ -21,10 +24,11 @@ import Section from "../components/section";
 You can now press <kbd>CTRL</kbd> + <kbd>ALT</kbd> + <kbd>N</kbd> to open an
 overlay window of your selected split.
 
-![overlay-window](./changelog/2.5.2/overlay-window.png)
+<Figure src="./changelog/2.5.2/overlay-window.png" width="500">
+  Active overlay window over a stream
+</Figure>
 
-<br />
-Authored by @nerixyz with help from @pajlada
+<Credit author="nerixyz" helper="pajlada" />
 
 </div>
 
@@ -35,39 +39,41 @@ Authored by @nerixyz with help from @pajlada
 Messages using the **Message Effects** or **Gigantify an Emote** power-up
 feature are now highlighted. We don't actually show any message effects, nor do we gigantify the emote, but you can pretend the emote is bigger now that you know it's meant to be gigantified.
 
-![message-effect](./changelog/2.5.2/message-effect.png)
-
-<br />
-![gigantic-emote](./changelog/2.5.2/gigantic-emote.png)
-
-<br />
+<FigureGroup>
+  <Figure src="./changelog/2.5.2/message-effect.png" width="400">
+    A **Message Effect** redemption
+  </Figure>
+  <Figure src="./changelog/2.5.2/gigantic-emote.png" width="400">
+    A **Gigantify an Emote** redemption
+  </Figure>
+</FigureGroup>
 
 Messages from Shared Chats now indicate which channel it was sent in.
 
-![shared-chat](./changelog/2.5.2/shared-chat.png)
-
-<br />
+<Figure src="./changelog/2.5.2/shared-chat.png" width="500">
+  A message from a shared chat
+</Figure>
 
 We've provided better control of some AutoMod features. You can control whether or not to show AutoMod messages that were blocked due to a blocked term. By default, no blocked terms will be visible if you have streamer mode enabled.
 
-Streamer mode enabled:
-
-![streamer mode
-enabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png)
-
-<br />
-
-Streamer mode disabled:
-
-![streamer mode
-disabled](./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png)
-
-<br />
+<FigureGroup>
+  <Figure
+    src="./changelog/2.5.2/automod-blocked-term-streamer-mode-enabled.png"
+    width="400"
+  >
+    AutoMod alerts in streamer mode
+  </Figure>
+  <Figure
+    src="./changelog/2.5.2/automod-blocked-term-streamer-mode-disabled.png"
+    width="400"
+  >
+    AutoMod alerts with streamer mode disabled
+  </Figure>
+</FigureGroup>
 
 Added the `/warn` command which prevents the user from chatting until they acknowledge the warning on Twitch's website.
 
-<br />
-Authored by @iProdigy and @pajlada with help from @nerixyz
+<Credit author="iProdigy, pajlada" helper="nerixyz" />
 
 </div>
 
@@ -79,20 +85,20 @@ If you use the inline moderation buttons, you can now upload custom icons for th
 
 To add an icon to a moderation action, click Moderation in the Settings dialog, go to the Moderation buttons tab, and double-click the icon cell next to your action.
 
-![in-settings](./changelog/2.5.2/moderation-button-settings.png)
+<Figure src="./changelog/2.5.2/moderation-button-settings.png" width="500">
+  Settings for custom moderation action buttons
+</Figure>
 
-In chat:
+<FigureGroup>
+  <Figure src="./changelog/2.5.2/moderation-button-in-chat.png" width="300">
+    Custom moderation actions in chat
+  </Figure>
+  <Figure src="./changelog/2.5.2/moderation-button-after-click.png" width="300">
+    User timed out after clicking
+  </Figure>
+</FigureGroup>
 
-![in-chat](./changelog/2.5.2/moderation-button-in-chat.png)
-
-After clicking the moderation icon:
-
-![after-action](./changelog/2.5.2/moderation-button-after-click.png)
-
-<br />
-Authored by @Mm2PL with help from @nerixyz and @pajlada
-
-<br />
+<Credit author="Mm2PL" helper="nerixyz, pajlada" />
 
 The `/ban`, `/timeout`, `/unban`, `/untimeout` commands now accept multiple channels if you want to easier wipe out cross-channel shenanigans.
 
@@ -110,8 +116,7 @@ Example moderation button action:
 
 - Ban the user in the current channel + another channel: `/ban --channel {channel.name} --channel nymn {user.name}`
 
-<br />
-Authored by @pajlada
+<Credit author="pajlada" />
 
 </div>
 
@@ -123,10 +128,11 @@ You can now show a user's pronoun from [pr.alejo.io](https://pr.alejo.io) in the
 
 This feature can be enabled with the "Show user's pronouns in user card" setting.
 
-![user-card-pronouns](./changelog/2.5.2/user-card-pronouns.png)
+<Figure src="./changelog/2.5.2/user-card-pronouns.png" width="400">
+  Pronouns shown in the user card
+</Figure>
 
-<br />
-Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
+<Credit author="franzitrone" helper="nerixyz, pajlada, iProdigy" />
 
 </div>
 
@@ -136,8 +142,7 @@ Authored by @franzitrone with help from @nerixyz @pajlada @iProdigy
 
 If you have the same channel open in multiple tabs, "reading" the message in one tab marks the other tabs as unread.
 
-<br />
-Authored by @hemirt with help from @nerixyz @pajlada
+<Credit author="hemirt" helper="nerixyz, pajlada" />
 
 </div>
 
@@ -155,8 +160,7 @@ Plugins are currently able to:
 
 - TODO: List capabilities (e.g. network requests, making messages)
 
-<br />
-Authored by @Mm2PL with help from @nerixyz @pajlada
+<Credit author="Mm2PL" helper="nerixyz, pajlada" />
 
 </div>
 
@@ -166,8 +170,7 @@ Authored by @Mm2PL with help from @nerixyz @pajlada
 
 Text, buttons, windows should now better respect your Windows display scale setting. If you've previously increased your font size & Chatterino2 scale then you might need to re-adjust them with this release.
 
-<br />
-Authored by @nerixyz
+<Credit author="nerixyz" />
 
 </div>
 
@@ -180,8 +183,7 @@ Tab". This will duplicate all splits in the tab, and their associated filters.
 
 TODO: maybe add a little gif
 
-<br />
-Authored by @KleberPF with help from @kornes @nerixyz @8thony @pajlada
+<Credit author="KleberPF" helper="kornes, nerixyz, 8thony, pajlada" />
 
 </div>
 
@@ -195,8 +197,7 @@ This removes the default Ctrl+Shift+L hotkey which was used for toggling the "li
 
 Custom hotkeys can still be added to swap to various tab visibility modes.
 
-<br />
-Authored by @pajlada with help from @nerixyz and @Mm2PL
+<Credit author="pajlada" helper="nerixyz, Mm2PL" />
 
 </div>
 
@@ -206,8 +207,7 @@ Authored by @pajlada with help from @nerixyz and @Mm2PL
 
 When using the `/settitle` and `/setgame` commands you're now told what's actually wrong.
 
-<br />
-Authored by @JakeRYW
+<Credit author="JakeRYW" />
 
 </div>
 
@@ -219,8 +219,7 @@ Added Brave, google-chrome-stable, firefox-devedition,
 firefox-developer-edition, firefox-beta, and firefox-nightly as
 supported browsers.
 
-<br />
-Authored by @Niller2005 and @teknsl
+<Credit author="Niller2005, teknsl" />
 
 </div>
 
@@ -231,8 +230,7 @@ Authored by @Niller2005 and @teknsl
 - Dragging & dropping now shows a line indicator instead of rectangle while reordering entries in tables.
 - Added some search tags for settings so it's easier to find them using search (e.g. "bttv" and "ffz" show all the BetterTTV and FrankerFaceZ settings.)
 
-<br />
-Authored by @nerixyz and @pajlada
+<Credit author="nerixyz, pajlada" />
 
 </div>
 
@@ -242,8 +240,7 @@ Authored by @nerixyz and @pajlada
 
 More actual links are now parsed as links, and non-links-but-things-that-look-like-links no longer parse as links.
 
-<br />
-Authored by @nerixyz
+<Credit author="nerixyz" />
 
 </div>
 
@@ -253,8 +250,7 @@ Authored by @nerixyz
 
 We now use Twitch's Helix API to load the list of emotes you can post. This means we can now see most emotes you have access to, including event emotes.
 
-<br />
-Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
+<Credit author="nerixyz" helper="Felanbird, occluder, iProdigy, pajlada" />
 
 </div>
 
@@ -264,8 +260,7 @@ Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
 
 If you were one of the 6 people using the IRC capability of Chatterino2, we have decided to no longer pursue this option - at least not in the way we did here. This release completely removes the IRC support. If you had IRC splits open before, they'll be replaced with empty splits with this release.
 
-<br />
-Authored by @pajlada
+<Credit author="pajlada" />
 
 </div>
 
