revert changes to old changelogs

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -465,16 +465,16 @@ A huge effort has been taken to refactor our message building process, adding a 
 
 ### New Contributors
 
-- @GongBingWong made their first contribution in #4848
-- @libklein made their first contribution in #4854
-- @h3o66 made their first contribution in #4867
-- @baines made their first contribution in #4922
-- @crazysmc made their first contribution in #4998
-- @gremble0 made their first contribution in #5013
-- @fraxxio made their first contribution in #5061
-- @Manfred made their first contribution in #5148
-- @KleberPF made their first contribution in #5172
-- @Heryin made their first contribution in #5263
+- [@GongBingWong](https://github.com/GongBingWong) made their first contribution in #4848
+- [@libklein](https://github.com/libklein) made their first contribution in #4854
+- [@h3o66](https://github.com/h3o66) made their first contribution in #4867
+- [@baines](https://github.com/baines) made their first contribution in #4922
+- [@crazysmc](https://github.com/crazysmc) made their first contribution in #4998
+- [@gremble0](https://github.com/gremble0) made their first contribution in #5013
+- [@fraxxio](https://github.com/fraxxio) made their first contribution in #5061
+- [@Manfred](https://github.com/Manfred) made their first contribution in #5148
+- [@KleberPF](https://github.com/KleberPF) made their first contribution in #5172
+- [@Heryin](https://github.com/Heryin) made their first contribution in #5263
 
 ## 2.4.6 (Released 2023-09-30)
 
