gif for duplicate tab

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -187,9 +187,11 @@ Text, buttons, windows should now better respect your Windows display scale sett
 <div className="changelog-entry">
 
 You can now duplicate tabs by right-clicking the tab and clicking "Duplicate
-Tab". This will duplicate all splits in the tab, and their associated filters.
+Tab".
 
-TODO: maybe add a little gif
+<Figure src="./changelog/2.5.2/duplicate-tab.webm" width="800">
+  Duplicating a tab, keeping filters & history intact
+</Figure>
 
 <Credit author="KleberPF" helper="kornes, nerixyz, 8thony, pajlada" />
 
