--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import { discord } from "../links";
 
 # Chatterino Changelog
 
-## 2.5.2 (Released TBD) {#2.5.2}
+## 2.5.2 Beta 1 {#2.5.2}
 
 ### Added overlay window support {#2.5.2-overlay-window}
 
