have you forsenGa

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -165,7 +165,7 @@ know in [this discussion.](https://github.com/Chatterino/chatterino2/discussions
 Have you started playing around with plugins and feel like something is
 missing, or something is unergonomic? [Start a new discussion.](https://github.com/Chatterino/chatterino2/discussions/new?category=ideas)
 
-Have you questions about plugins? Ask in our <a href={discord}>Discord</a> or [start a new
+Have questions about plugins? Ask in our <a href={discord}>Discord</a> or [start a new
 discussion.](https://github.com/Chatterino/chatterino2/discussions/new?category=q-a)
 
 <Credit author="Mm2PL" helper="nerixyz, pajlada" />
