Move IRC changelog entry to "Nerdier things"

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -264,16 +264,6 @@ We now use Twitch's Helix API to load the list of emotes you can post. This mean
 
 </div>
 
-### Removed beta IRC support {#2.5.2-bye-irc}
-
-<div className="changelog-entry">
-
-If you were one of the 6 people using the IRC capability of Chatterino2, we have decided to no longer pursue this option - at least not in the way we did here. This release completely removes the IRC support. If you had IRC splits open before, they'll be replaced with empty splits with this release.
-
-<Credit author="pajlada" />
-
-</div>
-
 ### Miscellaneous features {#2.5.2-miscellaneous-features}
 
 <div className="changelog-entry">
@@ -330,6 +320,8 @@ If you were one of the 6 people using the IRC capability of Chatterino2, we have
 <div className="changelog-entry">
 
 This release will be the last release of Chatterino2 that supports Qt5, meaning Windows 7 will disappear. Please update your Windows system if you're still on Windows 7.
+
+The IRC beta feature has been removed.
 
 A huge effort has been taken to refactor our message building process, adding a bunch of tests to them to ensuring it will take a lot more effort for us to break message building going forward. - Authored by @nerixyz with help from @pajlada
 
