--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import { discord } from "../links";
 
 # Chatterino Changelog
 
-## 2.5.2 Beta 1 {#2.5.2}
+## 2.5.2 {#2.5.2}
 
 ### Added overlay window support {#2.5.2-overlay-window}
 
@@ -308,10 +308,11 @@ We now use Twitch's Helix API to load the list of emotes you can post. This mean
 - Fixed global badges not showing in anonymous mode. - Authored by @nerixyz
 - Fixed incorrect message being disabled in some cases upon approving or denying a message caught by AutoMod. - Authored by @iProdigy with help from @jupjohn
 - Fixed emotes starting with ":" not tab-completing. - Authored by @nerixyz
-- Fixed 7TV emotes messing with Qt's HTML. - Authored by @nerixyz
+- Fixed 7TV emotes and usernames messing with Qt's HTML. - Authored by @nerixyz
 - Fixed incorrect messages getting replaced visually. - Authored by @nerixyz
 - Fixed pause indicator not appearing in certain cases. - Authored by @nerixyz
 - Fixed usercards not showing the login name in specific cases. - Authored by @Mm2PL
+- Fixed BTTV emotes occasionally showing the wrong author. - Authored by @nerixyz
 
 </div>
 
