chore: mention (expected) EOL of pubsub

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -23,7 +23,7 @@ import { discord, github } from "../links";
 <div className="changelog-entry">
 
 Twitch is shutting down the old API we used to get moderation events & channel
-point events from. In this release, we've updated to Twitch's new API
+point events from in the middle of April. In this release, we've updated to Twitch's new API
 [EventSub](https://dev.twitch.tv/docs/eventsub/).
 
 This change has one known drawback:
