chore: lua and shortcut

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -58,7 +58,7 @@ href={github}>GitHub</a>.
 
 Fixes various crashes that could occur when:
 
-- making a Lua HTTP request
+- making a Lua HTTP request from a coroutine
 - clicking the "Install" button for an update on Linux or macOS
 - closing down Chatterino
 - trying to search in an uninitialized split
@@ -187,7 +187,7 @@ your distro already runs something).
 
 - Hotkeys and their keybinds are now searchable. <Credit author="apa420" prs="5884" inline />
 
-- Overlay windows now inherit the global zoom level and can be zoomed independently. <Credit author="Nerixyz" prs="6016" inline />
+- Overlay windows can now be zoomed independently (by default: <kbd>CTRL</kbd>+<kbd>+</kbd>/<kbd>-</kbd>). <Credit author="Nerixyz" prs="6016" inline />
 
 - The `/watching` channel is now supported on all platforms. <Credit author="Nerixyz" prs="6031, 6043" inline />
 
