chore: reword qt5, and listify

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -125,7 +125,7 @@ your distro already runs something).
 
 - Channels that are visible are now joined first. <Credit author="Nerixyz" prs="5850" inline />
 
-- You can now allow other extensions to interact with Chatterino. <Credit author="MiguVT" prs="5997" inline />
+- You can now allow other browser extensions to interact with Chatterino. <Credit author="MiguVT" prs="5997" inline />
 
 - Added `Set highlight sounds` and `Open subscription page` hotkeys. <Credit author="brian6932" prs="5856, 6030" inline />
 
@@ -211,15 +211,12 @@ your distro already runs something).
 
 <div className="changelog-entry">
 
-This release does _not_ support Qt5, meaning if you're on Windows 7 you won't
-be able to run this. Please update your operating system.
-
-<br />
-
-A WEBP support check is run on startup. If your system doesn't support webp
-for whatever reason (e.g. packaging has gone wrong), you'll see a warning
-popup. Feel free to reach out if you need help figuring out why this is
-showing up for you.
+- From this release onwards, Qt 5 is no longer supported, meaning if you're on Windows 7 or 8 you won't
+  be able to run this. Please update your operating system.
+- A WEBP support check is run on startup. If your system doesn't support WEBP
+  for whatever reason (e.g. packaging has gone wrong), you'll see a warning
+  popup. Feel free to reach out if you need help figuring out why this is
+  showing up for you.
 
 </div>
 
